files/client-workspace/cluster-setup/dashboard/nodeport-service.yaml
# A temporary way to expose the kubernetes dashbaord until I get ingress working
---
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: kubernetes-dashboard
  name: kwas-kubernetes-dashboard
  namespace: kube-system
spec:
  ports:
    - port: 8443
      nodePort: 30443
  selector:
    k8s-app: kubernetes-dashboard
  type: NodePort
